--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build:": "cd projectFront && npm install && npm install build",
     "start": "nodemon --watch backend --exec node --experimental-modules projectBackend/server.js"
   },
   "author": "",
@@ -21,5 +22,6 @@
   "devDependencies": {
     "eslint": "^7.12.1",
     "nodemon": "^2.0.6"
-  }
+  },
+  "engines":{"node":"12.4.0","npm":"6.9.0"}
 }
