--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cd frontend && npm install && npm run build",
+    "build": "cd projectFront && npm install && npm run build",
     "start": "nodemon --watch backend --exec node --experimental-modules projectBackend/server.js"
   },
   "author": "",
